--- a/backend/package.json
+++ b/backend/package.json
@@ -15,5 +15,8 @@
     "express": "^4.19.2",
     "mongoose": "^8.5.4",
     "nodemon": "^3.1.4"
+  },
+  "dependencies": {
+    "mongodb": "^6.8.0"
   }
 }
