--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "nodemon": "^3.1.4"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0"
   }
 }
